using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationTags
{
    public const string Run = "speed";
    public const string Jumping_Bool = "jump";
    public const string Attack1_Trigger = "attack1";
    public const string Attack2_Trigger = "attack2";
    public const string Ulti_Trigger = "attack3";
    public const string Hurt_Trigger = "hurt";
    public const string Defense_Bool = "defense";
    public const string Die_Bool = "die";
}

public class Axis
{
    public const string Horizontal_Axis = "Horizontal";
}

public class Tags
{
    public const string Player1_Tag = "Player1";
    public const string Player2_Tag = "Player2";
    public const string Ground = "Ground";
    public const string Attack_Tag = "Attacker";
    public const string Ulti_Tag = "UltiAttack";
    public const string Health_Bar = "PlayerHealthBar";
    public const string Enemy_Health_Bar = "EnemyHealthBar";
    
}
